Another round of code suggestions.